--- a/src/main/resources/templates/repository.html
+++ b/src/main/resources/templates/repository.html
@@ -31,7 +31,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"
                         data-loading-text="&times;" autocomplete="off"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="modal-title">Repository settings</h4>
+                <h4 class="modal-title" id="modal-title">Repository settings <span class="setting-type"></span></h4>
             </div>
             <div class="modal-body">
                 <form class="form-horizontal">
@@ -99,6 +99,7 @@
             <th class="col-gitRegex">Git regex</th>
             <th class="col-modifier">Modifier</th>
             <th class="col-modified">Modified</th>
+            <th></th>
             <th><a class="item-add" href="#">Add</a></th>
         </tr>
         </thead>
@@ -154,6 +155,9 @@
                 2016-01-19
             </td>
             <td>
+                <a class="item-copy" href="#">Copy</a>
+            </td>
+            <td>
                 <a class="item-edit" href="#"
                    th:attr="data-val-id=${repos.id},
                             data-val-name=${repos.name},
@@ -172,12 +176,12 @@
 </div><!-- /.container -->
 
 <footer th:replace="_fragment::footer">
-    <script src="../static/jquery/js/jquery.min.js"></script>
-    <script src="../static/tether/js/tether.min.js"></script>
-    <script src="../static/bootstrap4a2/js/bootstrap.min.js"></script>
-    <script src="../static/d3/js/d3.min.js"></script>
-    <script src="../static/c3/js/c3.min.js"></script>
-    <script src="../static/app/js/app.js"></script>
+<script src="../static/jquery/js/jquery.min.js"></script>
+<script src="../static/tether/js/tether.min.js"></script>
+<script src="../static/bootstrap4a2/js/bootstrap.min.js"></script>
+<script src="../static/d3/js/d3.min.js"></script>
+<script src="../static/c3/js/c3.min.js"></script>
+<script src="../static/app/js/app.js"></script>
 </footer>
 <script type="text/javascript" th:inline="javascript">
 /*<![CDATA[*/
@@ -247,6 +251,8 @@ $('.item-add').on({
     click: function() {
         var $this = $(this);
 
+        $('.setting-type').text('[Add]');
+
         setModalForm({
             reposId: '',
             reposName: '',
@@ -283,12 +289,60 @@ $('.item-add').on({
 });
 
 /*
+ * Show copy modal
+ */
+$('.item-copy').on({
+    click: function () {
+        var $this = $(this);
+        var $tr = $this.closest('tr');
+
+        $('.setting-type').text('[Copy]');
+
+        setModalForm({
+            reposId: '',
+            reposName: $tr.find('.item-edit').data('val-name'),
+            reposExt: $tr.find('.item-edit').data('val-extensions'),
+            reposFilter: $tr.find('.item-edit').data('val-filter'),
+            gitDir: $tr.find('.item-edit').data('val-git-directory'),
+            gitRegex: $tr.find('.item-edit').data('val-git-extract-regex'),
+            sourceDir: $tr.find('.item-edit').data('val-source-directory'),
+            sourceRegex: $tr.find('.item-edit').data('val-source-extract-regex'),
+            classFileDir: $tr.find('.item-edit').data('val-class-file-directory'),
+            classFileRegex: $tr.find('.item-edit').data('val-class-file-extract-regex')
+        });
+
+        setModalBtnSave(function() {
+            var $this = $(this);
+            $.ajax({
+                type: 'POST',
+                url: /*[[ @{/api/v1/repositories} ]]*/ '#',
+                contentType: 'application/json;charset=UTF-8',
+                processData: false,
+                data: JSON.stringify(getModalForm()),
+                statusCode: {
+                    404: function() {
+                        console.log('page not found');
+                    }
+                }
+            }).done(function() {
+                location.href = /*[[ @{/repository} ]]*/ '#';
+            });
+        });
+
+        $('#modal').modal('show');
+    }
+});
+
+
+/*
  * Show edit modal
  */
 $('.item-edit').on({
     click: function () {
         var $this = $(this);
         var $tr = $this.closest('tr');
+
+        $('.setting-type').text('[Edit]');
 
         setModalForm({
             reposId: $tr.find('.item-edit').data('val-id'),
