--- a/src/main/resources/templates/_fragment.html
+++ b/src/main/resources/templates/_fragment.html
@@ -51,7 +51,7 @@
     </div>
 </div>
 <footer th:fragment="footer">
-<script src="../static/jquery/js/jquery.min.js" th:src="@{/jquery/js/jquery.min.js}"></script>
+<script src="../static/jquery2/js/jquery.min.js" th:src="@{/jquery2/js/jquery.min.js}"></script>
 <script src="../static/tether/js/tether.min.js" th:src="@{/tether/js/tether.min.js}"></script>
 <script src="../static/bootstrap4a2/js/bootstrap.min.js" th:src="@{/bootstrap4a2/js/bootstrap.min.js}"></script>
 <script src="../static/d3/js/d3.min.js" th:src="@{/d3/js/d3.min.js}"></script>
