Change layout of scatter chart

--- a/src/main/resources/templates/_fragment.html
+++ b/src/main/resources/templates/_fragment.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="../static/app/img/favicon.ico" th:href="@{/app/img/favicon.ico}"/>
     <link href="../static/tether/css/tether.min.css" th:href="@{/tether/css/tether.min.css}" rel="stylesheet"/>
     <link href="../static/bootstrap4a2/css/bootstrap.min.css" th:href="@{/bootstrap4a2/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link href="../static/font-awesome/css/font-awesome.min.css" th:href="@{/font-awesome/css/font-awesome.min.css}" rel="stylesheet"/>
     <link href="../static/c3/css/c3.min.css" th:href="@{/c3/css/c3.min.css}" rel="stylesheet"/>
     <link href="../static/app/css/style.css" th:href="@{/app/css/style.css}" rel="stylesheet"/>
 </head>
