--- a/src/main/resources/static/app/css/style.css
+++ b/src/main/resources/static/app/css/style.css
@@ -37,9 +37,9 @@ body {
 }
 
 #chart {
-    max-width: 800px;
-    max-height:600px;
-    height: 600px;
+    max-width: 98%;
+    max-height:480px;
+    height: 480px;
 }
 
 .table th,
