--- a/src/main/resources/templates/repository.html
+++ b/src/main/resources/templates/repository.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="../static/app/img/favicon.ico"/>
     <link href="../static/tether/css/tether.min.css" rel="stylesheet"/>
     <link href="../static/bootstrap4a2/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="../static/c3/css/c3.min.css" rel="stylesheet"/>
     <link href="../static/app/css/style.css" rel="stylesheet"/>
 </head>
