--- a/src/main/resources/static/app/css/style.css
+++ b/src/main/resources/static/app/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .bg-faded {
-    background-color: #c09d43;
+    background-color: #bca443;
 }
 
 .navbar-brand>object {
@@ -49,7 +49,7 @@ body {
 }
 
 .table thead {
-    background-color: #dbc58e;
+    background-color: #e6dcb2;
 }
 
 .navigator {
