--- a/src/main/resources/templates/_fragment.html
+++ b/src/main/resources/templates/_fragment.html
@@ -23,9 +23,9 @@
         </div>
         <nav class="navbar navbar-dark bg-inverse bg-faded">
             <div class="collapse navbar-toggleable-xs" id="navbar-header">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/">
                     <object type="image/svg+xml" data="../static/app/img/logo.svg" th:attr="data=@{/app/img/logo.svg}"
-                            alt="logo" width="32" height="32" style="color-fill:#fff;fill:#fff;color:#fff"></object>
+                            alt="logo" width="32" height="32"></object>
                     whisker
                 </a>
                 <ul class="nav navbar-nav">
