--- a/src/main/resources/templates/_fragment.html
+++ b/src/main/resources/templates/_fragment.html
@@ -51,7 +51,7 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav pull-xs-right">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="navbar-toggler nav-link" href="#"
                            data-toggle="collapse" data-target="#exCollapsingNavbar">
                             &#9776;
