--- a/src/main/resources/templates/_fragment.html
+++ b/src/main/resources/templates/_fragment.html
@@ -11,56 +11,54 @@
     <link href="../static/app/css/style.css" th:href="@{/app/css/style.css}" rel="stylesheet"/>
 </head>
 <body>
-<div class="container">
-    <div th:fragment="navigator" class="navigator">
-        <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbar-header" aria-controls="navbar-header"></button>
-        <div class="collapse" id="exCollapsingNavbar">
-            <div class="p-a-1">
-                <h4>Preference navigator</h4>
-                <a href="#"
-                   th:href="@{/repository}">Repository</a>
-            </div>
+<div th:fragment="navigator" class="navigator">
+    <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbar-header" aria-controls="navbar-header"></button>
+    <div class="collapse" id="exCollapsingNavbar">
+        <div class="p-a-1">
+            <h4>Preference navigator</h4>
+            <a href="#"
+               th:href="@{/repository}">Repository</a>
         </div>
-        <nav class="navbar navbar-dark bg-inverse bg-faded">
-            <div class="collapse navbar-toggleable-xs" id="navbar-header">
-                <a class="navbar-brand" href="/">
-                    <object type="image/svg+xml" data="../static/app/img/logo.svg" th:attr="data=@{/app/img/logo.svg}"
-                            alt="logo" width="32" height="32"></object>
-                    whisker
-                </a>
-                <ul class="nav navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link dropdown-toggle" href="#"
-                           data-toggle="dropdown" data-target="#"
-                           aria-haspopup="true" aria-expanded="false"
-                           role="button">Bubble chart<span class="caret"></span></a>
-                        <div class="dropdown-menu menu-bubble">
-                            <a class="dropdown-item" href="#"
-                               th:href="@{/chart/refactoring-impact/bubble}">Refactoring impact</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link dropdown-toggle" href="#"
-                           data-toggle="dropdown" data-target="#"
-                           aria-haspopup="true" aria-expanded="false"
-                           role="button">Scatter chart<span class="caret"></span></a>
-                        <div class="dropdown-menu menu-scatter">
-                            <a class="dropdown-item" href="#"
-                               th:href="@{/chart/refactoring-impact/scatter}">Refactoring impact</a>
-                        </div>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav pull-xs-right">
-                    <li class="nav-item">
-                        <a class="navbar-toggler nav-link" href="#"
-                           data-toggle="collapse" data-target="#exCollapsingNavbar">
-                            &#9776;
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
     </div>
+    <nav class="navbar navbar-dark navbar-static-top bg-inverse bg-faded">
+        <div class="collapse navbar-toggleable-xs" id="navbar-header">
+            <a class="navbar-brand" href="/">
+                <object type="image/svg+xml" data="../static/app/img/logo.svg" th:attr="data=@{/app/img/logo.svg}"
+                        alt="logo" width="32" height="32"></object>
+                whisker
+            </a>
+            <ul class="nav navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link dropdown-toggle" href="#"
+                       data-toggle="dropdown" data-target="#"
+                       aria-haspopup="true" aria-expanded="false"
+                       role="button">Bubble chart<span class="caret"></span></a>
+                    <div class="dropdown-menu menu-bubble">
+                        <a class="dropdown-item" href="#"
+                           th:href="@{/chart/refactoring-impact/bubble}">Refactoring impact</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link dropdown-toggle" href="#"
+                       data-toggle="dropdown" data-target="#"
+                       aria-haspopup="true" aria-expanded="false"
+                       role="button">Scatter chart<span class="caret"></span></a>
+                    <div class="dropdown-menu menu-scatter">
+                        <a class="dropdown-item" href="#"
+                           th:href="@{/chart/refactoring-impact/scatter}">Refactoring impact</a>
+                    </div>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav pull-xs-right">
+                <li class="nav-item">
+                    <a class="navbar-toggler nav-link" href="#"
+                       data-toggle="collapse" data-target="#exCollapsingNavbar">
+                        &#9776;
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </div>
 <footer th:fragment="footer">
 <script src="../static/jquery2/js/jquery.min.js" th:src="@{/jquery2/js/jquery.min.js}"></script>
