--- a/src/main/resources/templates/_fragment.html
+++ b/src/main/resources/templates/_fragment.html
@@ -14,7 +14,7 @@
 <div th:fragment="navigator" class="navigator">
     <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbar-header" aria-controls="navbar-header"></button>
     <div class="collapse" id="exCollapsingNavbar">
-        <div class="p-a-1">
+        <div class="container-fluid p-a-1">
             <h4>Preference navigator</h4>
             <a href="#"
                th:href="@{/repository}">Repository</a>
