--- a/src/main/resources/templates/_fragment.html
+++ b/src/main/resources/templates/_fragment.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="header (title)">
+<head th:fragment="header(title)">
     <meta charset="UTF-8"/>
-    <title th:text="${title}">title</title>
+    <title th:text="${title} + ' - whisker'">title</title>
     <link rel="icon" href="../static/app/img/favicon.ico" th:href="@{/app/img/favicon.ico}"/>
     <link href="../static/tether/css/tether.min.css" th:href="@{/tether/css/tether.min.css}" rel="stylesheet"/>
     <link href="../static/bootstrap4a2/css/bootstrap.min.css" th:href="@{/bootstrap4a2/css/bootstrap.min.css}" rel="stylesheet"/>
