--- a/src/main/resources/templates/chart.html
+++ b/src/main/resources/templates/chart.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="_fragment::header (title=${title} + ' - bluefairy')">
+<head th:replace="_fragment::header(title=${title})">
     <meta charset="UTF-8"/>
     <title></title>
     <link rel="icon" href="../static/app/img/favicon.ico"/>
