--- a/src/main/resources/static/app/css/style.css
+++ b/src/main/resources/static/app/css/style.css
@@ -2,6 +2,12 @@ body {
     padding-bottom: 20px;
 }
 
+input[readonly] {
+    background-color: transparent;
+    border: 0;
+    display: inline;
+}
+
 .bg-faded {
     background-color: #3d4b66;  /* HSB 220,40,40 */
 }
