--- a/src/main/resources/static/app/css/style.css
+++ b/src/main/resources/static/app/css/style.css
@@ -72,3 +72,21 @@ input[readonly] {
 .popover {
     max-width: 480px;
 }
+
+.ui-corner-all {
+    width: 92%;
+    left: 4px;
+    border-radius: 10px;
+}
+
+.ui-slider,
+.ui-slider-range {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.ui-slider-horizontal .ui-slider-handle {
+    top: -4px;
+}
